Adding the bcrypt dependency

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Alejandro Martinez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "mysql2": "^3.16.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
