--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.1"
   },
