--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express-validator": "^7.3.1",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.16.1"
+    "mysql2": "^3.16.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
