--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.9.0",
+    "cors": "^2.8.6",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "formidable": "^3.5.4",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
