--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.1",
+    "nodemailer": "^7.0.13",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/express": "^5.0.6",
     "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.9",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
